# SimpleEvent

./: .gitignore  LICENSE  README.md  SimpleEvents.sln  pyproject.toml  run.py
SimpleEvents.Backend/: Program.cs
SimpleEvents.Backend/Controllers/: TimelineController.cs
SimpleEvents.Backend/Models/: Timeline.cs
SimpleEvents.Backend/Services/: TimelineService.cs
SimpleEvents.Backend/static/: index.html
SimpleEvents.Backend/static/css/: styles.css
SimpleEvents.Backend/static/js/: app.js
src/simpleevent/: __init__.py  main.py  models.py  routes.py  storage.py
static/: index.html
static/js/: app.js
